fix(activity): throws null when using map ( route `/{id}` )
fix(test/activity): incorrect expectation ( `get_notFound_returnsEmptyBody` )